Give a little more space for cpu and network

--- a/nixos/waybar/.config/waybar/style.css
+++ b/nixos/waybar/.config/waybar/style.css
@@ -31,6 +31,11 @@
   transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
 }
 
+#cpu,
+#network {
+  padding: 0.5rem 0.7rem;
+}
+
 #workspaces {
   padding: 2px;
   margin-left: 7px; /* Margin from the far left edge */
